--- a/configs/dnsmasq.conf
+++ b/configs/dnsmasq.conf
@@ -62,7 +62,7 @@ address=/uplay.cache.saltlan.org/10.0.0.5
 ## gameservers
 address=/csgo.server.saltlan.org/10.0.0.10
 address=/tf2.server.saltlan.org/10.0.0.11
-address=/ut3.server.saltlan.org/10.0.0.12
+address=/q3.server.saltlan.org/10.0.0.12
 address=/insurgency.server.saltlan.org/10.0.0.13
 address=/ss3.server.saltlan.org/10.0.0.14
 address=/chiv.server.saltlan.org/10.0.0.15
